<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/gain"
        app:layout_constraintBottom_toBottomOf="@id/spinnerGain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinnerGain" />

    <Spinner
        android:id="@+id/spinnerGain"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:entries="@array/ecgGain"
        app:layout_constraintStart_toEndOf="@id/tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/speed"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/spinnerGain"
        app:layout_constraintStart_toEndOf="@id/spinnerGain"
        app:layout_constraintTop_toTopOf="@id/spinnerGain" />

    <Spinner
        android:id="@+id/spinnerSpeed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_10"
        android:entries="@array/ecgSpeed"
        app:layout_constraintStart_toEndOf="@id/tv1"
        app:layout_constraintTop_toTopOf="@id/spinnerGain" />



    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/tv_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerGain" >

        <com.lepu.ecg500.ecg12.DrawEcgRealView
            android:id="@+id/ecgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/analysis"
        app:layout_constraintBottom_toBottomOf="@id/spinnerAnalysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinnerAnalysis" />

    <Spinner
        android:id="@+id/spinnerAnalysis"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:entries="@array/analysis"
        app:layout_constraintStart_toEndOf="@id/tv4"
        app:layout_constraintTop_toTopOf="@id/tv_start"
        app:layout_constraintBottom_toBottomOf="@id/tv_start" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/btn_bg_selector"
        android:gravity="center"
        android:text="@string/collection"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_play_arrow_24" />




    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="@id/spinnerShare"
        app:layout_constraintStart_toEndOf="@id/tv_start"
        app:layout_constraintTop_toTopOf="@id/spinnerShare" />

    <Spinner
        android:id="@+id/spinnerShare"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:entries="@array/share"
        app:layout_constraintStart_toEndOf="@id/tv5"
        app:layout_constraintTop_toTopOf="@id/tv_start"
        app:layout_constraintBottom_toBottomOf="@id/tv_start" />

</androidx.constraintlayout.widget.ConstraintLayout>