<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/ic_button_red"
        android:gravity="center"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:text="关闭"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerPff"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/spinnerPff" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gain"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerGain"
        app:layout_constraintEnd_toStartOf="@+id/spinnerGain"
        app:layout_constraintTop_toTopOf="@+id/spinnerGain" />

    <Spinner
        android:id="@+id/spinnerGain"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:entries="@array/ecgGain"
        app:layout_constraintEnd_toStartOf="@+id/tv1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerSpeed"
        app:layout_constraintEnd_toStartOf="@+id/spinnerSpeed"
        app:layout_constraintTop_toTopOf="@+id/spinnerSpeed" />


    <Spinner
        android:id="@+id/spinnerSpeed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_marginEnd="20dp"
        android:entries="@array/ecgSpeed"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/tv_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerGain">

        <com.lepu.ecg500.view.DrawEcgRealView
            android:id="@+id/ecgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/lpf"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/spinnerLpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinnerLpf" />

    <Spinner
        android:id="@+id/spinnerLpf"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:entries="@array/lpf"
        app:layout_constraintBottom_toBottomOf="@id/tv_start"
        app:layout_constraintStart_toEndOf="@id/tv2"
        app:layout_constraintTop_toTopOf="@id/tv_start" />


    <TextView
        android:id="@+id/tv_start"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_bg_selector"
        android:gravity="center"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:text="@string/collection"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:drawableStartCompat="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pff"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/spinnerPff"
        app:layout_constraintStart_toEndOf="@+id/spinnerLpf"
        app:layout_constraintTop_toTopOf="@id/spinnerPff" />

    <Spinner
        android:id="@+id/spinnerPff"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginStart="76dp"
        android:entries="@array/pff"
        app:layout_constraintBottom_toBottomOf="@id/tv_start"
        app:layout_constraintStart_toEndOf="@+id/spinnerLpf"
        app:layout_constraintTop_toTopOf="@id/tv_start" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="姓名："
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerGain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerGain" />

    <TextView
        android:id="@+id/tv_patientname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="    "
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="性别："
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_patientname"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="年龄："
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_sex"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="岁"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_age"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="心电图(PCECG500)"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/tv"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="         "
        android:textColor="@color/purple_500"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <CheckBox
        android:id="@+id/cb_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        app:layout_constraintBottom_toBottomOf="@+id/et_after"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_after"
        android:layout_width="40dp"
        android:layout_height="33dp"

        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintStart_toStartOf="@+id/tv2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="秒后自动采集"
        app:layout_constraintBottom_toBottomOf="@+id/et_after"
        app:layout_constraintStart_toEndOf="@+id/et_after"
        app:layout_constraintTop_toTopOf="@+id/et_after" />

    <CheckBox
        android:id="@+id/cb_autoclose"
        android:layout_width="53dp"
        android:layout_height="30dp"
        android:paddingLeft="-0.0dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_after"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/cb_auto" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="自动关闭"
        app:layout_constraintBottom_toBottomOf="@+id/et_after"
        app:layout_constraintStart_toEndOf="@+id/cb_auto"
        app:layout_constraintTop_toTopOf="@+id/cb_auto" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="诊断结论："
        app:layout_constraintStart_toEndOf="@+id/cb_autoclose"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tv_diag"
        android:layout_width="530dp"
        android:layout_height="23dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_heatrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="--"
        android:textColor="@color/purple_500"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start"
        app:layout_constraintEnd_toStartOf="@+id/tv_start"
        app:layout_constraintTop_toTopOf="@+id/tv_start"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="心率"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/tv_heatrate"
        app:layout_constraintTop_toTopOf="@+id/tv_heatrate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="次/分"
        app:layout_constraintBottom_toBottomOf="@+id/tv_heatrate"
        app:layout_constraintStart_toEndOf="@+id/tv_heatrate"
        app:layout_constraintTop_toTopOf="@+id/tv_heatrate"
        app:layout_constraintVertical_bias="0.612" />

</androidx.constraintlayout.widget.ConstraintLayout>